--- a/odoo-custom-addons/wifiber/views/sale_view.xml
+++ b/odoo-custom-addons/wifiber/views/sale_view.xml
@@ -212,7 +212,9 @@
                 <field name="type" position="attributes" >
                     <attribute name="invisible" >1</attribute>
                 </field>
-
+                <field name="ref" position="attributes" >
+                     <attribute name="invisible" >1</attribute>
+                 </field>
 
                 <xpath expr="//page[@name='sales_purchases']//field[@name='user_id']"  position="attributes" >
                     <attribute name="groups" >wifiber.group_show_sales_person</attribute>
@@ -260,16 +262,21 @@
                     <field name="vlan"  />
                     <field name="olt_id" options="{'no_open': True, 'no_create': True}"  />
                     <field name="gpon"  />
+                    <field name="mac_address"  />
+                    <field name="service_port_no"  />
+                    <field name="onu_pon_power"  />
+                    <field name="remote_access"  />
+                    <field name="cust_priority"  />
                     <field name="ip_address"  />
+                    <field name="location_id"  options="{'no_open': True, 'no_create': True}"  />
+                    <field name="base_station_id" domain="[('location_id','=',location_id)]" options="{'no_open': True, 'no_create': True}"  />
+                    <field name="bandwidth"  />
                     <field name="activation_date"  />
                      <field name="region_id" options="{'no_open': True, 'no_create': True}"  />
                     <field name="estate_id" options="{'no_open': True, 'no_create': True}" />
                     <field name="gender"   />
                     <field name="dob" />
                     <field name="company_id" readonly="1" invisible="1" />
-                    <field name="location_id"  options="{'no_open': True, 'no_create': True}"  />
-                    <field name="base_station_id" domain="[('location_id','=',location_id)]" options="{'no_open': True, 'no_create': True}"  />
-                    <field name="bandwidth"  />
                     <field name="contact_person"  />
                     <field name="cpe"  />
                     <field name="radio_ip_address"  />
@@ -393,7 +400,7 @@
                             type="object"
                             class="oe_stat_button"
                             icon="fa-pencil-square-o"
-                            attrs="{'invisible': [('ticket_count', '=', 0)]}" >
+                            attrs="{'invisible': [('ticket_count', '=', 0)]}"  >
                         <field  name="ticket_count" widget="statinfo" string="Ticket" />
                     </button>
                 </div>
@@ -515,103 +522,7 @@
                 </field>
         </record>
 
-        <!-- Prospect -->
-  <record id="prospect_form" model="ir.ui.view">
-            <field name="name">prospect.form</field>
-            <field name="model">prospect</field>
-            <field name="arch" type="xml">
-                <form string="Prospect">
-                    <header>
-                        <button name="btn_contacted" type="object" states="new" string="Contacted" class="oe_highlight"  groups="wifiber.group_show_prospect_contacted_btn" />
-                         <button name="btn_reset" states="contacted" type="object" string="Reset to Draft"  groups="wifiber.group_show_prospect_reset_btn" />
-                        <field name="state" widget="statusbar"  />
-                    </header>
-                    <sheet>
-                        <group col="4"   >
-                              <field name="name"  attrs="{'readonly': [('state', '=', 'contacted')]}"/>
-                            <field name="area_id" readonly="1" />
-                             <field name="address" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                            <field name="email" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                             <field name="phone" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                            <field name="open_date" readonly="1" />
-                             <field name="user_id" readonly="1" />
-                            <field name="contacted_date" readonly="1" />
-                             <field name="request_ticket_id" readonly="1" />
-                             <field name="expiry_date" readonly="1" />
-                            <field name="comment" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                             <field name="is_non_compliance_email_sent"  readonly="1" />
-                            <field name="is_non_compliance_email_sent_date"  readonly="1" />
-                        </group>
-                    </sheet>
-                     <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers"/>
-                    <field name="message_ids" widget="mail_thread"/>
-                </div>
-
-                </form>
-            </field>
-          </record>
-
-        <record model="ir.ui.view" id="prospect_tree_view">
-            <field name="name">Prospect Tree</field>
-            <field name="model">prospect</field>
-              <field name="arch" type="xml">
-                  <tree string="Prospect" >
-                        <field name="name" />
-                             <field name="address" />
-                             <field name="area_id" options="{'no_open': True, 'no_create': True}"  />
-                             <field name="email" />
-                             <field name="phone" />
-                      <field name="open_date" />
-                            <field name="contacted_date" />
-                      <field name="expiry_date"  />
-                                <field name="user_id" />
-                             <field name="state" />
-                      <field name="comment" />
-
-                  </tree>
-              </field>
-        </record>
-
-         <record id="view_prospect_filter" model="ir.ui.view">
-            <field name="name">Prospect Search</field>
-            <field name="model">prospect</field>
-            <field name="arch" type="xml">
-                <search string="Prospect Search">
-                    <field name="name" string="Name" filter_domain="[('name','ilike',self)]"/>
-                     <field name="address"  />
-                     <field name="email" />
-                     <field name="area_id"  />
-                    <field name="user_id"/>
-                    <field name="state" />
-                    <separator/>
-                    <filter string="New" name="New" domain="[('state', '=', 'new')]"/>
-                    <filter string="Contacted" name="Contacted" domain="[('state', '=', 'contacted')]"/>
-
-                    <group expand="0" string="Group By" >
-                        <filter name="area" string="Area" context="{'group_by':'area_id'}"/>
-                        <filter string="Sales Person" name="Sales Person" context="{'group_by':'user_id'}" />
-                         <filter name="grp_state" string="Status" context="{'group_by':'state'}"/>
-                        <separator/>
-                         <filter name="opened_date" string="Opened Date" context="{'group_by':'open_date'}" help="Opened Date"/>
-                         <filter name="expiry_date" string="Expiry Date" context="{'group_by':'expiry_date'}" help="Expiry Date"/>
-                        <filter name="contacted_date" string="Contacted Date" context="{'group_by':'contacted_date'}" help="Contacted Date"/>
-
-                    </group>
-                </search>
-            </field>
-        </record>
-
-         <record id="action_prospect" model="ir.actions.act_window">
-            <field name="res_model">prospect</field>
-            <field name="name">Prospect</field>
-            <field name="view_mode">tree,form,pivot,graph</field>
-               <field name="context">{'search_default_grp_state' : 1}</field>
-        </record>
-
-         <menuitem id="menu_prospect" name="Prospects" parent="sale.sale_order_menu" action="action_prospect" sequence="14"/>
-
-        <!-- Your Customers -->
+              <!-- Your Customers -->
         <record id="res_partner_action_customer_wifiber" model="ir.actions.act_window">
             <field name="name">Your Customers</field>
             <field name="type">ir.actions.act_window</field>
