--- a/odoo-custom-addons/kin_purchase/views/purchase_views.xml
+++ b/odoo-custom-addons/kin_purchase/views/purchase_views.xml
@@ -89,10 +89,83 @@
                 <xpath expr="//field[@name='order_line']/kanban/field[@name='product_id']" position="attributes" >
                      <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
                 </xpath>
-
-
             </field>
         </record>
+
+
+          <!-- Purchase Order Lines -->
+        <record id="view_purchase_order_line_tree_extend" model="ir.ui.view">
+            <field name="name">purchase.order.line.tree.extend</field>
+            <field name="model">purchase.order.line</field>
+            <field name="arch" type="xml">
+                <tree string="Purchases Order Lines"  create="0" delete="0" edit="0"  >
+                    <field name="product_id" />
+                    <field name="order_id"/>
+                    <field name="partner_id"/>
+                    <field name="product_uom_qty" string="Qty"/>
+                    <field name="qty_received"/>
+                    <field name="qty_invoiced"/>
+                    <field name="qty_to_invoice"/>
+                    <field name="product_uom" string="Unit of Measure" />
+                    <field name="price_subtotal" sum="Total" widget="monetary"/>
+                    <field name="name"/>
+                </tree>
+            </field>
+        </record>
+
+         <record model="ir.ui.view" id="purchase_order_line_pivot">
+            <field name="name">purchase.order.line.pivot</field>
+            <field name="model">purchase.order.line</field>
+            <field name="arch" type="xml">
+                <pivot string="Purchases Order Line" >
+                    <field name="product_id" type="row"/>
+                    <field name="price_subtotal" type="measure"/>
+                </pivot>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="purchase_order_line_graph">
+            <field name="name">purchase.order.line.graph</field>
+            <field name="model">purchase.order.line</field>
+            <field name="arch" type="xml">
+                <graph string="Purchase Order Lines">
+                    <field name="product_id"  type="row"/>
+                    <field name="price_subtotal" type="measure"/>
+                </graph>
+            </field>
+        </record>
+
+        <record id="view_purchase_order_line_search_extend" model="ir.ui.view">
+            <field name="name">purchase.order.line.search</field>
+            <field name="model">purchase.order.line</field>
+            <field name="arch" type="xml">
+                <search string="Search Purchase Order Lines">
+                    <field name="order_id" />
+                    <field name="partner_id" operator="child_of" />
+                    <field name="product_id" />
+                    <group expand="0" string="Group By">
+                         <filter name="groupby_state" string="Status" domain="[]" context="{'group_by':'state'}"/>
+                        <filter name="groupby_product" string="Product" domain="[]" context="{'group_by':'product_id'}"/>
+                         <filter name="groupby_vend" string="Supplier" domain="[]" context="{'group_by':'partner_id'}"/>
+                        <filter name="groupby_order" string="Order" domain="[]" context="{'group_by':'order_id'}"/>
+
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="action_purchase_order_lines" model="ir.actions.act_window">
+            <field name="name">Purchase Order Lines</field>
+            <field name="res_model">purchase.order.line</field>
+            <field name="context">{'search_default_groupby_product': 1,'search_default_groupby_state': 1}</field>
+            <field name="domain">[('state', 'not in', ['draft', 'cancel'])]</field>
+            <field name="view_mode">tree,pivot,graph</field>
+            <field name="view_id" ref="view_purchase_order_line_tree_extend"/>
+             <field name="search_view_id" ref="view_purchase_order_line_search_extend"/>
+        </record>
+
+        <menuitem id="menu_purchase_order_lines" name="Purchases Analysis"
+                action="action_purchase_order_lines" parent="purchase.purchase_report"
+                sequence="31"/>
 
 
 
