--- a/odoo-custom-addons/wifiber/views/sale_view.xml
+++ b/odoo-custom-addons/wifiber/views/sale_view.xml
@@ -10,6 +10,11 @@
 		    <field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_salesman_all_leads')])]"/>
         </record>
 
+        <record model="ir.ui.menu" id="crm.crm_menu_root">
+		 <field name="groups_id" eval="[(6, 0, [ref('group_show_crm_menu_wifiber')])]"/>
+        </record>
+
+
 
         <!-- Location -->
         <record id="view_location_form" model="ir.ui.view">
@@ -296,6 +301,22 @@
             </field>
          </record>
 
+           <record id="view_partner_tree_sale_extend_wifiber" model="ir.ui.view">
+            <field name="name">res.partner.tree</field>
+            <field name="model">res.partner</field>
+            <field eval="8" name="priority"/>
+            <field name="inherit_id" ref="kin_sales.view_partner_tree_sale_extend"/>
+            <field name="arch" type="xml">
+                    <field name="ref" position="attributes" >
+                        <attribute name="readonly" >1</attribute>
+                    </field>
+                <field name="display_name" position="replace" >
+                        <field name="name" />
+                    </field>
+            </field>
+           </record>
+
+
 
         <record id="base.action_partner_form" model="ir.actions.act_window">
             <field name="name">Customers</field>
@@ -307,6 +328,36 @@
             <field name="help" type="html">
               <p class="oe_view_nocontent_create">
                 Click to add a contact in your address book.
+              </p>
+            </field>
+        </record>
+
+        <record id="account.res_partner_action_customer" model="ir.actions.act_window">
+            <field name="name">Customers</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">tree,form,kanban</field>
+            <field name="context">{'search_default_customer': 1,'res_partner_search_mode': 'customer', 'default_is_company': True, 'default_customer_rank': 1}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                Create a new customer in your address book
+              </p><p>
+                Odoo helps you easily track all activities related to a customer.
+              </p>
+            </field>
+        </record>
+
+        <record id="account.res_partner_action_supplier" model="ir.actions.act_window">
+            <field name="name">Vendors</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">tree,form,kanban</field>
+            <field name="context">{'search_default_supplier': 1,'res_partner_search_mode': 'supplier', 'default_is_company': True, 'default_supplier_rank': 1}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                Create a new supplier in your address book
+              </p><p>
+                Odoo helps you easily track all activities related to a supplier.
               </p>
             </field>
         </record>
@@ -452,8 +503,8 @@
                 </xpath>
 
 
-                 <xpath expr="//field[@name='order_line']/form"  position="replace" />
-                 <xpath expr="//field[@name='order_line']/kanban"  position="replace" />
+<!--                 <xpath expr="//field[@name='order_line']/form"  position="replace" />-->
+<!--                 <xpath expr="//field[@name='order_line']/kanban"  position="replace" />-->
 
                 <field name="sale_order_template_id"  position="attributes" >
                     <attribute name="required" >True</attribute>
@@ -471,7 +522,6 @@
                 <field name="invoice_status"  position="attributes" >
                     <attribute name="invisible" >1</attribute>
                 </field>
-
             </field>
         </record>
 
