--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -376,15 +376,12 @@
                             <field name="partner_shipping_id" groups="sale.group_delivery_invoice_address" context="{'default_type':'delivery'}" options='{"always_reload": True}'/>
                         </group>
                         <group name="order_details">
-                            <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
-                            <div class="o_td_label" groups="base.group_no_one" attrs="{'invisible': [('state', 'in', ['sale', 'done', 'cancel'])]}">
-                                <label for="date_order" string="Quotation Date"/>
+                            <div class="o_td_label" >
+                                 <label for="date_order" string="Quotation Date" attrs="{'invisible': [('state', 'not in', ['draft', 'sent'])]}" />
+                                <label for="date_order" string="Order Date" attrs="{'invisible': [('state', 'in', ['draft', 'sent'])]}" />
                             </div>
-                            <field name="date_order" nolabel="1" groups="base.group_no_one" attrs="{'invisible': [('state', 'in', ['sale', 'done', 'cancel'])]}"/>
-                            <div class="o_td_label" attrs="{'invisible': [('state', 'in', ['draft', 'sent'])]}">
-                                <label for="date_order" string="Order Date"/>
-                            </div>
-                            <field name="date_order" attrs="{'required': [('state', 'in', ['sale', 'done'])], 'invisible': [('state', 'in', ['draft', 'sent'])]}" nolabel="1"/>
+                            <field name="date_order" attrs="{'required': [('state', 'in', ['sale', 'done'])]}" nolabel="1"/>
+                             <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
                             <field name="show_update_pricelist" invisible="1"/>
                             <label for="pricelist_id" groups="product.group_product_pricelist"/>
                             <div groups="product.group_product_pricelist" class="o_row">
