--- a/odoo-custom-addons/wifiber/views/cron_data.xml
+++ b/odoo-custom-addons/wifiber/views/cron_data.xml
@@ -41,6 +41,21 @@
             <field name="nextcall" eval="(DateTime.now() + timedelta(hours=2)).strftime('%Y-%m-%d %H:%M:%S')"/>
             <field name="doall" eval="False"/>
         </record>
+
+
+        <record forcecreate="True" id="ir_cron_run_crm_lead_wifiber_check" model="ir.cron">
+            <field name="name">CRM Lead Check</field>
+            <field name="model_id" ref="model_crm_lead"/>
+            <field name="state">code</field>
+            <field name="code">model.run_crm_lead_check()</field>
+            <field name="user_id" ref="base.user_root"/>
+            <field name="interval_number">1</field>
+            <field name="interval_type">days</field>
+            <field name="numbercall">-1</field>
+            <field name="nextcall" eval="(DateTime.now() + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')"/>
+            <field name="doall" eval="False"/>
+        </record>
+
     </data>
 </odoo>
 
