--- a/odoo-custom-addons/wifiber/views/ticket_view.xml
+++ b/odoo-custom-addons/wifiber/views/ticket_view.xml
@@ -2,8 +2,13 @@
 <odoo>
     <data>
 
-         <menuitem name="Report" id="menu_ticket_report" action="action_ticket_report_wizard"
-          parent="kin_helpdesk.kin_help_desk" sequence="5"    />
+         <menuitem name="Report" id="menu_wifiber_report"   parent="kin_helpdesk.kin_help_desk" sequence="5"    />
+        <menuitem name="Ticket Report" id="menu_ticket_report" action="action_ticket_report_wizard"
+          parent="menu_wifiber_report" sequence="1"    />
+        <menuitem name="Material Request Report" id="menu_material_report" action="action_material_report_wizard"
+          parent="menu_wifiber_report" sequence="2"    />
+        <menuitem name="Material Issued (Used) Report" id="menu_issued_report" action="action_issued_report_wizard"
+          parent="menu_wifiber_report" sequence="3"    />
 
 
         <!-- Ticket  -->
@@ -19,6 +24,11 @@
                             <field name="show_alert_box" invisible="1"/>
                     </div>
                 </xpath>
+
+                 <xpath expr="//form" position="attributes" >
+                    <attribute name="duplicate">0</attribute>
+                </xpath>
+
                 <button name="btn_ticket_done" position="after" >
                     <button name="btn_ticket_finalized" type="object"  string="Finalize"  class="oe_highlight" groups="wifiber.group_helpdesk_finalized_ticket"  attrs="{'invisible': ['|',('category_code', 'not in', ('installation','support') ),('state', 'not in', ('done') )]}"   />
                     <button name="%(action_disapprove_finalized)d" type="action" states="done,finalized"  string="Reject" groups="wifiber.group_helpdesk_finalized_ticket"  />
@@ -30,35 +40,34 @@
                      <button name="btn_ticket_maint_approve" type="object"  string="Maintenance Approved"  class="oe_highlight" groups="wifiber.group_helpdesk_maint_ticket" attrs="{'invisible': ['|',('category_code', '!=', 'maintenance' ),('state', 'not in', ('new') )]}"    />
                      <button type="action"  string="Maintenance Declined"  name="%(action_disapprove_maint)d"   class="oe_highlight" groups="wifiber.group_helpdesk_maint_ticket"   attrs="{'invisible': ['|',('category_code', '!=', 'maintenance' ),('state', 'not in', ('new') )]}"  />
                 </button>
+                 <button name="btn_ticket_progress" position="before" >
+                    <button name="btn_ticket_material_request" type="object" colspan="4"  string="Request Material"   class="oe_highlight"   attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('new') )]}" groups="wifiber.group_show_request_material_btn"   />
+
+                </button>
                 <button name="btn_ticket_progress" position="after" >
-                     <button name="btn_ticket_installed" type="object"  string="Installed"  class="oe_highlight" attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('progress','material_request') )]}"    />
+                     <button name="btn_ticket_installed" type="object"  string="Installed"  class="oe_highlight" attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('progress') )]}"    />
 
                 </button>
                  <button name="btn_ticket_progress" position="attributes" >
                       <attribute  name="states" >maint_approve,new,material_request</attribute>
                  </button>
+
                  <button name="btn_ticket_close" position="attributes" >
                      <attribute  name="states" >finalized</attribute>
                  </button>
                 <button name="btn_ticket_cancel" position="attributes" >
-                     <attribute  name="states" >new,maint_approve,progress,done,finalized,major</attribute>
+                     <attribute  name="states" >new,maint_approve,progress,done,finalized,major,material_request</attribute>
                     <attribute name="confirm" >Are you sure you want to cancel this ticket?</attribute>
                 </button>
                  <button name="btn_ticket_reset" position="attributes" >
-                         <attribute name="states" >new,progress,done,finalized,closed,cancel,major</attribute>
+                         <attribute name="states" >new,progress,done,finalized,closed,cancel,major,material_request</attribute>
                         <attribute name="confirm" >Are you sure you want to reset this ticket back to draft state?</attribute>
                  </button>
                 <field name="state" widget="statusbar"  position="attributes">
                     <attribute name="statusbar_visible" >draft,new,progress,done,finalized,closed</attribute>
                 </field>
 
-                 <xpath expr="//sheet/group" position="before">
-                        <div class="oe_button_box" name="button_box">
-                            <button type="object"  name="btn_view_stock_picking" class="oe_stat_button" icon="fa-bars" attrs="{'invisible': [('stock_picking_count', '=', 0)]}"  groups="stock.group_stock_manager" >
-                                <field name="stock_picking_count" widget="statinfo" string="Transfers"/>
-                            </button>
-                        </div>
-                </xpath>
+
 
                 <field name="partner_id" position="after" >
                      <field name="assigned_eng_user_ids" invisible="1" />
@@ -136,13 +145,16 @@
                                 attrs="{'invisible': [('invoice_count', '=', 0)]}" >
                                 <field  name="invoice_count" widget="statinfo" string="Invoice" />
                          </button>
+                        <button type="object"  name="btn_view_stock_picking" class="oe_stat_button" icon="fa-bars" attrs="{'invisible': [('stock_picking_count', '=', 0)]}"  groups="stock.group_stock_manager" >
+                                <field name="stock_picking_count" widget="statinfo" string="Transfers"/>
+                            </button>
                     </div>
                 </field>
                 <field name="time_spent" position="after" >
 <!--                    <field name="survey_ticket_id"  domain = "[('id','!=',id),('category_id','=',2)]" options="{'no_open': True, 'no_create': True}" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />-->
                     <field name="duration_close" />
                     <field name="order_id" readonly="1" />
-                    <field name="is_request_material" />
+                    <field name="is_request_material" invisible="1" />
                 </field>
 
                 <page name="description" position="replace" >
@@ -180,33 +192,7 @@
                             </group>
                     </page>
 
-                    <page string="Material Request" attrs="{'invisible': [('category_code', '!=', 'installation'),('is_request_material', '!=', True)]}" >
 
-                        <group string="Requested Materials" >
-                             <field nolabel="1" name="material_request_ids"  attrs="{'required': [('is_request_material', '=', True )]}"  >
-                                <tree editable="bottom" >
-                                    <field name="product_id" domain="[('is_material', '=', True)]"  />
-                                    <field name="qty" sum="Total" />
-                                    <field name="is_requested" readonly="1" />
-                                    <field name="requested_by" readonly="1" />
-                                    <field name="requested_datetime" readonly="1" />
-                                </tree>
-                            </field>
-                        </group>
-                         <group class="oe_subtotal_footer oe_right" colspan="2" >
-                              <button name="btn_ticket_material_request" type="object" colspan="4"  string="Request Material"   class="oe_highlight"   attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('new') )]}" groups="wifiber.group_show_request_material_btn"   />
-
-                         </group>
-
-<!--                         <group colspan="2" string="Issued Materials" >-->
-<!--&lt;!&ndash;                             <field nolabel="1" name="material_request_ids"  attrs="{'required': [('is_request_material', '=', True )]}"  >&ndash;&gt;-->
-<!--&lt;!&ndash;                                <tree editable="bottom" >&ndash;&gt;-->
-<!--&lt;!&ndash;                                    <field name="product_id" domain="[('is_material', '=', True)]"  />&ndash;&gt;-->
-<!--&lt;!&ndash;                                    <field name="qty" />&ndash;&gt;-->
-<!--&lt;!&ndash;                                </tree>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </field>&ndash;&gt;-->
-<!--                        </group>-->
-                    </page>
 
                     <page string="Activation Form" attrs="{'invisible': [('category_code', '!=', 'installation' )]}" >
                         <group col="4" >
@@ -226,7 +212,7 @@
                                 <field name="cust_priority"  attrs="{'readonly': [('state', 'in', ('closed'))]}" />
                                 <field name="location_id"   options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('closed'))]}" />
                           <field name="wifi_ssid"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
-                            <field name="expiration_date" attrs="{'readonly': [('state', 'in', ('closed'))]}" />
+
                             <field name="splitter_box_code"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                             <field name="region_id" options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                            <field name="installation_approver_id" options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
@@ -238,7 +224,7 @@
                             <field name="radio_model"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                             <field name="comment_activation"  attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                               <field name="activation_date" attrs="{'readonly': [('state', 'in', ('closed'))]}" />
-
+                            <field name="expiration_date" attrs="{'readonly': [('state', 'in', ('closed'))]}" />
                         </group>
                         <group string="Activation Declined Information">
                              <field name="rejection_evidence" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
@@ -250,7 +236,7 @@
                             <group col="4" >
                                 <field name="description" />
                                  <field name="source_support" attrs="{'readonly': [('state', 'in', ('closed'))], 'required': [('category_code', '=', 'support' )]}"   />
-                                 <field name="complaint_type_support_id" attrs="{'readonly': [('state', 'in', ('closed'))], 'required': [('category_code', '=', 'support' )]}"    />
+                                  <field name="complaint_type_support_id" attrs="{'readonly': [('state', 'in', ('closed'))], 'required': [('category_code', '=', 'support' )]}"  options="{'no_open': True, 'no_create': True}"   />
                                   <field name="call_type_support" attrs="{'readonly': [('state', 'in', ('closed'))]}"   />
 
                             </group>
@@ -278,15 +264,16 @@
                     <page  string="Site Survey and SRF Form"  attrs="{'invisible': [('category_code', '!=', 'survey' )]}" >
                              <group col="4" >
                                  <field name="description" />
-                                 <field name="site_survey_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
+                                 <field name="crm_id" readonly="1" />
+                                 <field name="site_survey_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                  <field name="srf_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                  <field name="dist_fpop" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
                                  <field name="fpop_box_jb" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-                                 <field name="equipment_required" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-                                   <field name="access_confirmation" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-                                   <field name="comment_survey" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
+
+                                   <field name="access_confirmation" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
+                                   <field name="comment_survey" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                  <field name="installation_constraint" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-                                 <field name="survey_attachment" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
+                                 <field name="survey_attachment" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                              </group>
                     </page>
                     <page  string="Call Log" attrs="{'invisible': [('category_code', '!=', 'call_log' )]}" >
@@ -303,6 +290,44 @@
                          <group col="4" string="Major" >
                             <field name="description"  />
                          </group>
+                    </page>
+
+                    <page string="Material Request" attrs="{'invisible': [('category_code', 'not in', ('installation','survey')),('is_request_material', '!=', True)]}" >
+
+                        <group string="Requested Materials" >
+                             <field nolabel="1" name="material_request_ids" readonly="1"  attrs="{'required': [('is_request_material', '=', True )]}"  >
+                                <tree editable="bottom" >
+                                    <field name="product_id" domain="[('is_material', '=', True)]"    options="{'no_open': True, 'no_create': True}"   />
+                                    <field name="qty" sum="Total" />
+                                    <field name="is_requested" readonly="1" />
+                                    <field name="requested_by" readonly="1" />
+                                    <field name="requested_datetime" readonly="1" />
+                                </tree>
+                            </field>
+                        </group>
+
+                        <group string="Issued Materials" >
+                            <field  nolabel="1" name="move_line_ids" readonly="1" >
+                                <tree editable="bottom">
+                                    <field name="product_id" />
+                                    <field name="location_id" />
+                                    <field name="lot_id" />
+                                    <field name="qty_done" />
+                                    <field name="issued_by" />
+                                    <field name="issued_datetime" />
+                                </tree>
+                            </field>
+                        </group>
+
+
+<!--                         <group colspan="2" string="Issued Materials" >-->
+<!--&lt;!&ndash;                             <field nolabel="1" name="material_request_ids"  attrs="{'required': [('is_request_material', '=', True )]}"  >&ndash;&gt;-->
+<!--&lt;!&ndash;                                <tree editable="bottom" >&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <field name="product_id" domain="[('is_material', '=', True)]"  />&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <field name="qty" />&ndash;&gt;-->
+<!--&lt;!&ndash;                                </tree>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </field>&ndash;&gt;-->
+<!--                        </group>-->
                     </page>
 
                     <page name="cust_details"  string="Customer Details"  groups="wifiber.group_helpdesk_show_customer_other_tabs" >
@@ -347,7 +372,6 @@
                             </group>
 
                   </page>
-
 
                     <page  string="Other Information" groups="wifiber.group_helpdesk_show_customer_other_tabs" >
                         <group  >
@@ -398,6 +422,9 @@
             <field name="arch" type="xml">
                     <field name="user_ticket_group_id" position="before" >
                          <field name="duration_close" />
+                    </field>
+                    <field name="partner_id" position="before" >
+                         <field name="ref" />
                     </field>
             </field>
         </record>
@@ -657,6 +684,7 @@
                      <field name="is_pause_escalation"     />
                      <field name="is_pause_comment" attrs="{'required': [('is_pause_escalation', '=', True)],'invisible': [('is_pause_escalation', '=', False)]}" />
                     <field name="ticket_id"     />
+                     <field name="is_from_ticket" readonly="1" />
                 </field>
 
                 <group name="other_infos" position="after"  >
@@ -666,6 +694,10 @@
                         <field name="is_escalation_email_sent_date"  readonly="1" />
                     </group>
                 </group>
+
+                 <page name="operations" position="attributes">
+                         <attribute name="attrs" >{'invisible': [('is_from_ticket', '=', True) ,('picking_type_id','!=',1 )]}</attribute>
+                 </page>
 
 
 
