--- a/odoo-custom-addons/wifiber/views/ticket_view.xml
+++ b/odoo-custom-addons/wifiber/views/ticket_view.xml
@@ -40,27 +40,24 @@
                      <button name="btn_ticket_maint_approve" type="object"  string="Maintenance Approved"  class="oe_highlight" groups="wifiber.group_helpdesk_maint_ticket" attrs="{'invisible': ['|',('category_code', '!=', 'maintenance' ),('state', 'not in', ('new') )]}"    />
                      <button type="action"  string="Maintenance Declined"  name="%(action_disapprove_maint)d"   class="oe_highlight" groups="wifiber.group_helpdesk_maint_ticket"   attrs="{'invisible': ['|',('category_code', '!=', 'maintenance' ),('state', 'not in', ('new') )]}"  />
                 </button>
-                 <button name="btn_ticket_progress" position="before" >
-                    <button name="btn_ticket_material_request" type="object" colspan="4"  string="Request Material"   class="oe_highlight"   attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('new') )]}" groups="wifiber.group_show_request_material_btn"   />
 
-                </button>
                 <button name="btn_ticket_progress" position="after" >
                      <button name="btn_ticket_installed" type="object"  string="Installed"  class="oe_highlight" attrs="{'invisible': ['|',('category_code', '!=', 'installation' ),('state', 'not in', ('progress') )]}"    />
 
                 </button>
                  <button name="btn_ticket_progress" position="attributes" >
-                      <attribute  name="states" >maint_approve,new,material_request</attribute>
+                      <attribute  name="states" >maint_approve,new</attribute>
                  </button>
 
                  <button name="btn_ticket_close" position="attributes" >
                      <attribute  name="states" >finalized</attribute>
                  </button>
                 <button name="btn_ticket_cancel" position="attributes" >
-                     <attribute  name="states" >new,maint_approve,progress,done,finalized,major,material_request</attribute>
+                     <attribute  name="states" >new,maint_approve,progress,done,finalized,major</attribute>
                     <attribute name="confirm" >Are you sure you want to cancel this ticket?</attribute>
                 </button>
                  <button name="btn_ticket_reset" position="attributes" >
-                         <attribute name="states" >new,progress,done,finalized,closed,cancel,major,material_request</attribute>
+                         <attribute name="states" >new,progress,done,finalized,closed,cancel,major</attribute>
                         <attribute name="confirm" >Are you sure you want to reset this ticket back to draft state?</attribute>
                  </button>
                 <field name="state" widget="statusbar"  position="attributes">
@@ -154,7 +151,7 @@
 <!--                    <field name="survey_ticket_id"  domain = "[('id','!=',id),('category_id','=',2)]" options="{'no_open': True, 'no_create': True}" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />-->
                     <field name="duration_close" />
                     <field name="order_id" readonly="1" />
-                    <field name="is_request_material" invisible="1" />
+                    <field name="is_skip_material" groups="wifiber.group_helpdesk_show_skip_material_ticket" />
                 </field>
 
                 <page name="description" position="replace" >
@@ -198,11 +195,11 @@
                         <group col="4" >
                             <field name="description" />
                             <field name="installation_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
-                            <field name="idu_serial_no"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))], 'required': [('category_code', '=', 'installation' ),('state', 'not in', ('draft','new','material_request','maint_approve') )]}" />
-                              <field name="installation_fse_id" domain="[('id','in',assigned_eng_user_ids),('is_group_email','=',False)]"  options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))], 'required': [('category_code', '=', 'installation' ),('state', 'not in', ('draft','new','maint_approve','material_request') )]}" />
-                              <field name="power_level_id" options="{'no_open': True, 'no_create': True}" attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))], 'required': [('category_code', '=', 'installation' ),('state', 'not in', ('draft','new','maint_approve','material_request') )]}" />
-                            <field name="vlan"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))], 'required': [('category_code', '=', 'installation' ),('state', 'not in', ('draft','new','maint_approve','material_request') )]}" />
-                            <field name="olt_id"  options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))], 'required': [('category_code', '=', 'installation' ),('state', 'not in', ('draft','new','maint_approve','material_request') )]}" />
+                            <field name="idu_serial_no"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))]}" />
+                              <field name="installation_fse_id" domain="[('id','in',assigned_eng_user_ids),('is_group_email','=',False)]"  options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))]}" />
+                              <field name="power_level_id" options="{'no_open': True, 'no_create': True}" attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))]}" />
+                            <field name="vlan"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))]}" />
+                            <field name="olt_id"  options="{'no_open': True, 'no_create': True}"  attrs="{'readonly': [('state', 'in', ('done','finalized', 'closed'))]}" />
                            <field name="gpon_level" attrs="{'readonly': [('state', 'in', ('closed'))]}"  /> <!-- required should not be set on the view for ip-address, so that the system does not require it when the installation ticket is about to be disapproved -->
                          <field name="ip_address" attrs="{'readonly': [('state', 'in', ('closed'))]}"  /> <!-- required should not be set on the view for ip-address, so that the system does not require it when the installation ticket is about to be disapproved -->
                            <field name="mac_address"  attrs="{'readonly': [('state', 'in', ('closed'))]}"  />
@@ -265,14 +262,15 @@
                              <group col="4" >
                                  <field name="description" />
                                  <field name="crm_id" readonly="1" />
-                                 <field name="site_survey_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
-                                 <field name="srf_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
+
+
                                  <field name="dist_fpop" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
                                  <field name="fpop_box_jb" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-
+                                <field name="installation_constraint" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
                                    <field name="access_confirmation" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                    <field name="comment_survey" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
-                                 <field name="installation_constraint" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
+                                 <field name="site_survey_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
+                                 <field name="srf_form" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                  <field name="survey_attachment" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                              </group>
                     </page>
@@ -292,21 +290,22 @@
                          </group>
                     </page>
 
-                    <page string="Material Request" attrs="{'invisible': [('category_code', 'not in', ('installation','survey')),('is_request_material', '!=', True)]}" >
+                    <page string="Material Request" attrs="{'invisible': [('category_code', 'not in', ('installation','survey'))]}" >
 
                         <group string="Requested Materials" >
-                             <field nolabel="1" name="material_request_ids" readonly="1"  attrs="{'required': [('is_request_material', '=', True )]}"  >
+                             <field nolabel="1" name="material_request_ids"   attrs="{'readonly': [('category_code', 'not in', ('survey'))]}"  >
                                 <tree editable="bottom" >
                                     <field name="product_id" domain="[('is_material', '=', True)]"    options="{'no_open': True, 'no_create': True}"   />
                                     <field name="qty" sum="Total" />
                                     <field name="is_requested" readonly="1" />
                                     <field name="requested_by" readonly="1" />
                                     <field name="requested_datetime" readonly="1" />
+                                    <field name="picking_ids" readonly="1"  widget="many2many_tags" />
                                 </tree>
                             </field>
                         </group>
 
-                        <group string="Issued Materials" >
+                        <group string="Issued (Used) Materials" >
                             <field  nolabel="1" name="move_line_ids" readonly="1" >
                                 <tree editable="bottom">
                                     <field name="product_id" />
@@ -320,14 +319,6 @@
                         </group>
 
 
-<!--                         <group colspan="2" string="Issued Materials" >-->
-<!--&lt;!&ndash;                             <field nolabel="1" name="material_request_ids"  attrs="{'required': [('is_request_material', '=', True )]}"  >&ndash;&gt;-->
-<!--&lt;!&ndash;                                <tree editable="bottom" >&ndash;&gt;-->
-<!--&lt;!&ndash;                                    <field name="product_id" domain="[('is_material', '=', True)]"  />&ndash;&gt;-->
-<!--&lt;!&ndash;                                    <field name="qty" />&ndash;&gt;-->
-<!--&lt;!&ndash;                                </tree>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </field>&ndash;&gt;-->
-<!--                        </group>-->
                     </page>
 
                     <page name="cust_details"  string="Customer Details"  groups="wifiber.group_helpdesk_show_customer_other_tabs" >
@@ -685,6 +676,7 @@
                      <field name="is_pause_comment" attrs="{'required': [('is_pause_escalation', '=', True)],'invisible': [('is_pause_escalation', '=', False)]}" />
                     <field name="ticket_id"     />
                      <field name="is_from_ticket" readonly="1" />
+                     <field name="mater_ids" invisible="1"  />
                 </field>
 
                 <group name="other_infos" position="after"  >
